# cookie-cutter-python

./: .gitignore  LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: Dockerfile  README.md  Taskfile.yml  pyproject.toml
{{cookiecutter.project_slug}}/src/: main.py
{{cookiecutter.project_slug}}/tests/: test_main.py  test_{{cookiecutter.project_slug}}.py
